--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ android {
     }
 }
 
+apply plugin: 'com.android.application'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
